Updated TODO list

--- a/Geekle/TODO
+++ b/Geekle/TODO
@@ -1,7 +1,7 @@
 Things To Do:
-[ ] - Start command in Geekbot
-[ ] - Guess command in Geekbot
-[ ] - Status command
+[X] - Start command in Geekbot
+[X] - Guess command in Geekbot
+[X] - Status command
 [ ] - Winner Notification
 [ ] - Clean up game and prep for next
 [ ] - Keep score in DB of some kind
